[project]
name = "cache-augmented-generation-granite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=0.26.0",
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "sentence-transformers>=3.4.1",
    "torch>=2.6.0",
    "transformers>=4.48.2",
]
